# localllm-rust-tool-calling

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/handler/: mod.rs  query_handler.rs  system_prompt.txt
src/llm/: mod.rs  ollama.rs
src/tools/: mod.rs  python_invoker.rs  websearch.rs
