[package]
name = "rust-chat-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
scraper = "0.17"
url = "2.4"
urlencoding = "2.1"
base64 = "0.21"
